push-em-all-app/main/default/objects/PushEmAll_Log__c/PushEmAll_Log__c.object-meta.xml
<CustomObject>
    <label>PushEmAll Log</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>PushEmAll Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PushEmAll Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>