push-em-all-app/main/default/objects/PushEmAll_Log__c/fields/Notification_Body__c.field-meta.xml
<CustomField>
    <fullName>Notification_Body__c</fullName>
    <label>Notification Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>