push-em-all-app/main/default/objects/PushEmAll_Log__c/fields/Notification_Title__c.field-meta.xml
<CustomField>
    <fullName>Notification_Title__c</fullName>
    <label>Notification Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>