push-em-all-app/main/default/objects/PushEmAll_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Notification_Title__c</columns>
    <columns>Notification_Body__c</columns>
    <columns>Target_Record_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>